# qvSZP

./: .gitignore  README.md  basis_vDZP  basisq  basisq_wopol  ecpq  fpm.toml  meson.build  meson_options.txt  q-vszp.f90  qvSZP.code-workspace
app/: main.f90  meson.build
assets/SI-CEH-v2/lfer/: charges.eeq.para.csv
assets/SI-CEH-v2/random_molecules/: random_molecules_compounds.csv
assets/SI-CEH-v2/scripts/: ctcharge.py
assets/SI-qvSZP-v2/actinides/: actinides_compounds.csv
assets/SI-qvSZP-v2/lfer/: charges.ceh-v2.para.csv
assets/SI-qvSZP-v2/mindless/: mindless_molecules_charges.csv
assets/SI-qvSZP-v2/random_molecules/: randommolecules.tgz
assets/SI-qvSZP-v2/scripts/: correlation.py  getcharges.py
assets/SI-qvSZP-v2/thermochemistry/: U2C-C80.xlsx  wB97X-D4_q-vSZP-v2_gmtkn55.out  wB97X-D4_q-vSZP-v2_gmtkn55_raw.out
config/: install-mod.py  meson.build
q-vSZP_basis/: basisq  basisq-3.0.0  basisq_gp3  basisq_gxtb  basisq_rev  basisq_tm  basisq_v2  basisq_v3_Nov17  basisq_v4_Nov18  basisq_v5_Nov20  basisq_v6_Dec11  basisq_wopol  ecpq
src/: basistype.f90  chargscfcts.f90  ioroutines.f90  meson.build  miscellaneous.f90  write_output.f90
subprojects/: mctc-lib.wrap  tblite.wrap
test/: main.f90
